# optimumai

./: .gitignore  404.html  CHANGELOG.md  LICENSE  PHILOSOPHY.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  web.yml  workflow.yml
api/: index.html
classical-ai/: index.html
cli/: index.html
course/: index.html
deploy/: index.html
docs/: api.md  classical-ai.md  cli.md  course.md  deploy.md  features.md  generation.md  gpu-kernels.md  index.md  interactive.md  learn-finetuning.md  learn-matplotlib.md  learn-numpy.md  learn-pytorch.md  quickstart.md  stability.md  visualization.md
examples/: fundamentals.py  quickstart.py
features/: index.html
generation/: index.html
gpu-kernels/: index.html
interactive/: index.html
learn-finetuning/: index.html
learn-matplotlib/: index.html
learn-numpy/: index.html
learn-pytorch/: index.html
notebooks/: 01_quickstart.ipynb  02_gpu_kernels_from_scratch.ipynb  03_hands_on.ipynb
quickstart/: index.html
search/: search_index.json
src/optimumai/: __init__.py  config.py
src/optimumai/_notebooks/: 01_quickstart.ipynb  02_gpu_kernels_from_scratch.ipynb  03_hands_on.ipynb  04_classical_ai.ipynb
src/optimumai/algebra/: __init__.py  matrix.py  vector.py
src/optimumai/analysis/: __init__.py  compare.py
src/optimumai/augmented_rnns/: __init__.py  act.py  attention.py  ntm.py
src/optimumai/autograd/: __init__.py  value.py
src/optimumai/calculus/: __init__.py  derivative.py
src/optimumai/circuit/: __init__.py  graph.py  interactive.py  render.py
src/optimumai/cli/: main.py
src/optimumai/core/: __init__.py  _fmt.py  base_op.py  explain.py  flow_trace.py  trace.py
src/optimumai/curriculum/: __init__.py  course.py
src/optimumai/dashboard/: app.py
src/optimumai/diffusion/: __init__.py  schedule.py
src/optimumai/embeddings/: __init__.py  lookup.py
src/optimumai/evaluation/: __init__.py  calibration.py  hallucination.py  perplexity.py  text_metrics.py
src/optimumai/exercises/: __init__.py  bank.py  engine.py
src/optimumai/flows/: __init__.py  _shared.py  attention_flow.py  tfidf_flow.py  transformer_flow.py  word2vec_flow.py
src/optimumai/foundations/: __init__.py  cuda_kernel.py  gpu_foundations.py  jax_foundations.py  kv_cache.py  math_foundations.py  pytorch_foundations.py  vram.py
src/optimumai/frontier/: __init__.py  flash_attention.py  lora.py  quantization.py  rlhf.py
src/optimumai/interactive/: __init__.py  prompts.py  repl.py
src/optimumai/interpretability/: __init__.py  superposition.py
src/optimumai/kernels/: __init__.py  backends.py  exercises.py  kernels.py  sim.py
src/optimumai/llm/: __init__.py  generate.py
src/optimumai/ml/: __init__.py  decision_tree.py  kmeans.py  knn.py  linear_regression.py  logistic_regression.py  metrics.py  naive_bayes.py  pca.py
src/optimumai/neural_networks/: __init__.py  backprop.py  mlp.py
src/optimumai/nlp/: __init__.py  bpe.py  edit_distance.py  ngram.py  tfidf.py  word2vec.py
src/optimumai/optimization/: __init__.py  optimizers.py
src/optimumai/probability/: __init__.py  softmax.py
src/optimumai/progress/: __init__.py  tracker.py
src/optimumai/prompting/: __init__.py  chain_of_thought.py  few_shot.py  react.py  self_consistency.py  structured_output.py  zero_shot.py
src/optimumai/quiz/: __init__.py  engine.py  questions.py
src/optimumai/rag/: __init__.py  explainer.py  flow.py  pipeline.py  trace.py
src/optimumai/review/: __init__.py  scheduler.py
src/optimumai/rl/: __init__.py  mdp.py  policy_gradient.py  ppo.py  q_learning.py
src/optimumai/search/: __init__.py  adversarial.py  informed.py  problem.py  uninformed.py
src/optimumai/symbolic/: __init__.py  differentiate.py
src/optimumai/transformers/: __init__.py  attention.py  block.py  multihead.py  positional.py  text_pipeline.py
src/optimumai/tutor/: __init__.py  llm_tutor.py
src/optimumai/tutorials/: __init__.py  core.py  finetuning_tut.py  matplotlib_tut.py  numpy_tut.py  pytorch_tut.py
src/optimumai/vision/: __init__.py  cnn.py  convolution.py  edges.py  pooling.py
src/optimumai/visualization/: __init__.py  animate.py  assets.py  concepts.py  explain.py  gallery.py  interactive.py  landscape.py  playgrounds.py  plots.py  plotstudio.py  terminal.py
src/optimumai/visualization/_static/: optix.js
src/optimumai/world_models/: __init__.py  jepa.py
stability/: index.html
tests/: test_algebra.py  test_applied.py  test_augmented_rnns.py  test_autograd.py  test_base_op_and_config.py  test_calculus.py  test_circuit.py  test_cli.py  test_cli_v3.py  test_core.py  test_curriculum.py  test_evaluation.py  test_flows.py  test_foundations.py  test_frontier.py  test_gallery.py  test_handson.py  test_interactive.py  test_interpretability.py  test_kernels.py  test_learning.py  test_ml.py  test_neural_networks.py  test_nlp.py  test_optimization.py  test_optix.py  test_playgrounds.py  test_plotstudio.py  test_probability.py  test_progress.py  test_prompting.py  test_rl.py  test_search.py  test_transformers.py  test_transformers_v2.py  test_tutor.py  test_tutorials_numpy_mpl.py  test_tutorials_torch_ft.py  test_v1.py  test_vision.py  (+2 more)
visualization/: index.html
web/: build.mjs  eslint.config.js  package-lock.json  package.json  tsconfig.json
web/src/: canvas.ts  index.ts  math.ts  mount.ts  nn.ts  rng.ts  stepper.ts
web/test/: math.test.ts  mount.test.ts  nn.test.ts  stepper.test.ts
